name:                number-words-haskell
version:             0.1.0.0
synopsis:            Parse a natural number into possible words
description:         Solve a number word problem in different ways
homepage:            https://github.com/FranklinChen/number-words-haskell
license:             BSD3
license-file:        LICENSE
author:              Franklin Chen
maintainer:          franklinchen@franklinchen.com
copyright:           Franklin Chen
category:            Text
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  default-language:    Haskell2010
  hs-source-dirs:      src
  exposed-modules:     NumberWords
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base >=4.7 && <4.8

test-suite spec
  type: exitcode-stdio-1.0
  default-language:    Haskell2010
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base,
                       number-words-haskell,
                       hspec
